--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -5,6 +5,7 @@
     left: 0;
     right: 0;
     width: 100%;
+    z-index: 1; /* Ensure nav is above content */
 }
 
 .navbar {
@@ -15,53 +16,41 @@
     right: 0;
     background-color: rgba(0,0,0,.2);
     display: none;
-    justify-content: flex-end; 
+    justify-content: flex-end;
+    z-index: 2; /* Ensure navbar is above nav */
 }
+
 .navbar.show {
     display: flex;
 }
+
 .nav-content {
     width: 20em;
     background-color: white;
-    overflow-y: auto; 
-    max-height: 100vh; 
+    overflow-y: auto;
+    max-height: 100vh;
 }
 
 /* Custom scrollbar styles */
 .nav-content::-webkit-scrollbar {
-    width: 12px; 
+    width: 12px;
 }
 
 .nav-content::-webkit-scrollbar-track {
-    background: #f1f1f1; 
+    background: #f1f1f1;
 }
 
 .nav-content::-webkit-scrollbar-thumb {
-    background: #888; 
-    border-radius: 10px; 
+    background: #888;
+    border-radius: 10px;
 }
 
 .nav-content::-webkit-scrollbar-thumb:hover {
-    background: #555; 
+    background: #555;
 }
 
 /* Scrollbar styles for Firefox */
 .nav-content {
     scrollbar-width: thin;
-    scrollbar-color: #888 #f1f1f1; 
-}
-
-
-.menu {
-    display: none;
-}
-.close{
-    width: fit-content;
-    height: fit-content;
-    margin-top: 10px;
-    border-radius: 50%;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -ms-border-radius: 50%;
-    -o-border-radius: 50%;
+    scrollbar-color: #888 #f1f1f1;
 }
